xmlui/src/components-core/optimization/specs/tests.txt
g > Async function declaration errors > should thr
ow error for async function with parameters
Error while executing code: Error: XMLUI does not
support async function declarations.

stderr | tests/components-core/lifecycle/onBeforeD
ispose.test.ts > fireBeforeDispose — async handler
 rejection > emits reason:throw violation when asy
nc handler rejects
Lifecycle violation on 'uid-8': 'beforeDispose' ha
ndler threw. Error: async-boom
    at /Users/yurii/projects/nsoftware/xmlui-monor
epo/xmlui/tests/components-core/lifecycle/onBefore
Dispose.test.ts:174:30
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:302:11
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:1903:26
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:2326:20
    at new Promise (<anonymous>)
    at runWithCancel (file:///Users/yurii/projects
/nsoftware/xmlui-monorepo/node_modules/@vitest/run
ner/dist/chunk-artifact.js:2323:10)
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:2305:20
    at new Promise (<anonymous>)
    at runWithTimeout (file:///Users/yurii/project
s/nsoftware/xmlui-monorepo/node_modules/@vitest/ru
nner/dist/chunk-artifact.js:2272:10)
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:2955:64

stderr | tests/components-core/scripts-runner/asyn
c-await-errors.test.ts > Async/Await Error Handlin
g > Async function declaration errors > should thr
ow error for nested async function
Error while executing code: Error: XMLUI does not
support async function declarations.
Error while executing code: Error: XMLUI does not
support async function declarations.

stderr | tests/components-core/scripts-runner/asyn
c-await-errors.test.ts > Async/Await Error Handlin
g > Await expression errors > should throw error f
or await in return statement
Error while executing code: Error: XMLUI does not
support the await operator.

stderr | tests/components-core/scripts-runner/asyn
c-await-errors.test.ts > Async/Await Error Handlin
g > Await expression errors > should throw error f
or await in variable declaration
Error while executing code: Error: XMLUI does not
support the await operator.


 ❯ tests/components-core/lifecycle/onBeforeDispose
.test.ts 9/9
 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
 ✓ tests/components-core/lifecycle/onBeforeDispose
.test.ts (9 tests) 11ms

 ❯ tests/components-core/lifecycle/onBeforeDispose
.test.ts 9/9
 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
stderr | tests/components-core/scripts-runner/asyn
c-await-errors.test.ts > Async/Await Error Handlin
g > Combined async/await errors > should throw err
or for async function with await in body
Error while executing code: Error: XMLUI does not
support async function declarations.

stderr | tests/components-core/scripts-runner/asyn
c-await-errors.test.ts > Async/Await Error Handlin
g > Combined async/await errors > should throw err
or for async arrow function
Error while executing code: Error: XMLUI does not
support async arrow functions.

stderr | tests/components-core/scripts-runner/asyn
c-await-errors.test.ts > Async/Await Error Handlin
g > Combined async/await errors > should throw err
or for async function expression
Error while executing code: Error: XMLUI does not
support async arrow functions.

stderr | tests/components-core/scripts-runner/asyn
c-await-errors.test.ts > Async/Await Error Handlin
g > Combined async/await errors > should throw err
or for async IIFE
Error while executing code: Error: XMLUI does not
support async arrow functions.

stderr | tests/components-core/scripts-runner/asyn
c-await-errors.test.ts > Async/Await Error Handlin
g > Combined async/await errors > should throw err
or for async IIFE with body
Error while executing code: Error: XMLUI does not
support async arrow functions.


 ❯ tests/components-core/lifecycle/onBeforeDispose
.test.ts 9/9
 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
 ✓ tests/components-core/scripts-runner/async-awai
t-errors.test.ts (19 tests) 9ms

 ❯ tests/components-core/lifecycle/onBeforeDispose
.test.ts 9/9
 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
 ✓ tests/language-server/services/reactive-cycle-d
iagnostic.test.ts (5 tests) 11ms

 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
adata-drift.test.ts [queued]
 ❯ tests/components-core/reactive-graph/collectCom
stderr | tests/components-core/scripts-runner/bann
edMembers.test.ts > Eval-tree integration — warn m
ode > allows access to a banned global identifier
(warn mode)
[XMLUI sandbox] DOM API access to 'window.__xmlui_
sandbox_test__' is not allowed in XMLUI expression
s. Use the managed alternative.

stderr | tests/components-core/scripts-runner/bann
edMembers.test.ts > Default behaviour (strictDomSa
ndbox not set) > allows access to a banned entry w
hen strictDomSandbox is not set (default warn)
[XMLUI sandbox] DOM API access to 'window.__xmlui_
sandbox_test__' is not allowed in XMLUI expression
s.


 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
adata-drift.test.ts [queued]
 ❯ tests/components-core/reactive-graph/collectCom
 ✓ tests/components-core/scripts-runner/bannedMemb
ers.test.ts (38 tests) 12ms
 ✓ tests/components-core/scripts-runner/eval-tree-
func-decl-async.test.ts (12 tests) 11ms
 ✓ tests/parsers/xmlui/transform.regression.test.t
s (9 tests) 10ms

 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
adata-drift.test.ts [queued]
 ❯ tests/components-core/reactive-graph/collectCom
 ✓ tests/components-core/reactive-graph/collectCom
ponentDefGraph.test.ts (10 tests) 8ms

 ❯ tests/components-core/action/callApi-mockExecut
e.test.ts [queued]
 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
 ✓ tests/language-server/services/completion.test.
ts (22 tests | 1 todo) 10ms

 ❯ tests/components-core/action/callApi-mockExecut
e.test.ts [queued]
 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
 ✓ tests/components-core/scripts-runner/AttributeV
alueParser.test.ts (12 tests) 8ms

 ❯ tests/components-core/action/callApi-mockExecut
e.test.ts [queued]
 ❯ tests/components-core/optimization/computedUses
.test.ts [queued]
 ❯ tests/components-core/optimization/renderer-met
 ✓ tests/components-core/scripts-runner/function-p
roxy.test.ts (7 tests) 19ms

 ❯ tests/components-core/action/callApi-mockExecut
e.test.ts [queued]
 ❯ tests/components-core/optimization/computedUses


 ❯ tests/components-core/action/callApi-mockExecut
e.test.ts 0/7
 ✓ tests/components-core/action/callApi-mockExecut
e.test.ts (7 tests) 18ms
 ✓ tests/parsers/scripting/parser-arrow.test.ts (2
8 tests) 12ms

 ❯ tests/components-core/action/callApi-mockExecut
e.test.ts 7/7
 ✓ tests/components-core/standalone-import-resolut
ion.test.ts (1 test) 12ms
 ✓ tests/components-core/optimization/computedUses
.test.ts (132 tests) 43ms

 ❯ tests/components-core/optimization/computedUses
.test.ts 132/132
stderr | tests/components-core/scripts-runner/eval
-tree-pre-post.test.ts > Evaluate prefix/postfix e
xpressions (exp) > cannot apply '++dummy' to non-d
efined variable - sync
Error while executing code: Error: Left value vari
able (dummy) not found in the scope.

stderr | tests/components-core/scripts-runner/eval
-tree-pre-post.test.ts > Evaluate prefix/postfix e
xpressions (exp) > cannot apply '--dummy' to non-d
efined variable - sync
Error while executing code: Error: Left value vari
able (dummy) not found in the scope.

stderr | tests/components-core/scripts-runner/eval
-tree-pre-post.test.ts > Evaluate prefix/postfix e
xpressions (exp) > cannot apply 'dummy++' to non-d
efined variable - sync
Error while executing code: Error: Left value vari
able (dummy) not found in the scope.

stderr | tests/components-core/scripts-runner/eval
-tree-pre-post.test.ts > Evaluate prefix/postfix e
xpressions (exp) > cannot apply 'dummy--' to non-d
efined variable - sync
Error while executing code: Error: Left value vari
able (dummy) not found in the scope.

stderr | tests/components-core/scripts-runner/eval
-tree-pre-post.test.ts > Evaluate prefix/postfix e
xpressions (exp) > cannot apply '++dummy' to non-d
efined variable - async
Error while executing code: Error: Left value vari
able (dummy) not found in the scope.

stderr | tests/components-core/scripts-runner/eval
-tree-pre-post.test.ts > Evaluate prefix/postfix e
xpressions (exp) > cannot apply '--dummy' to non-d
efined variable - async
Error while executing code: Error: Left value vari
able (dummy) not found in the scope.

stderr | tests/components-core/scripts-runner/eval
-tree-pre-post.test.ts > Evaluate prefix/postfix e
xpressions (exp) > cannot apply 'dummy++' to non-d
efined variable - async
Error while executing code: Error: Left value vari
able (dummy) not found in the scope.

stderr | tests/components-core/scripts-runner/eval
-tree-pre-post.test.ts > Evaluate prefix/postfix e
xpressions (exp) > cannot apply 'dummy--' to non-d
efined variable - async
Error while executing code: Error: Left value vari
able (dummy) not found in the scope.


 ❯ tests/components-core/optimization/computedUses
.test.ts 132/132
 ✓ tests/components-core/scripts-runner/eval-tree-
pre-post.test.ts (25 tests) 11ms
 ✓ tests/parsers/scripting/parser-new-operator.tes
t.ts (33 tests) 13ms

 ❯ tests/components-core/optimization/computedUses
.test.ts 132/132
 ✓ tests/components-core/scripts-runner/eval-tree-
new-operator.test.ts (16 tests) 9ms

 ❯ tests/components-core/optimization/computedUses
.test.ts 132/132
 ✓ tests/components-core/optimization/renderer-met
adata-drift.test.ts (28 tests) 41ms

 ❯ tests/components-core/optimization/computedUses
.test.ts 132/132
 ✓ tests/parsers/xmlui/lint.test.ts (15 tests) 11m
s
 ✓ tests/components-core/scripts-runner/eval-tree-
arrow-async.test.ts (11 tests) 9ms

 ❯ tests/components-core/optimization/renderer-met
adata-drift.test.ts 28/28

 ❯ tests/components-core/optimization/renderer-met
adata-drift.test.ts 28/28

 ❯ tests/components-core/lifecycle/dispatcher.test
.ts [queued]
stderr | tests/components-core/lifecycle/dispatche
r.test.ts > createLifecycleDispatcher > async unmo
unt handler reports a violation but resolves
Lifecycle violation on 'uid-a': async 'unmount' ha
ndler is not awaited (React commits unmount synchr
onously). Use 'onBeforeDispose' for async flush. u
ndefined

stderr | tests/components-core/lifecycle/dispatche
r.test.ts > createLifecycleDispatcher > throwing h
andler reports a violation and continues
Lifecycle violation on 'uid-a': 'mount' handler th
rew. Error: nope
    at /Users/yurii/projects/nsoftware/xmlui-monor
epo/xmlui/tests/components-core/lifecycle/dispatch
er.test.ts:93:13
    at Object.fire (/Users/yurii/projects/nsoftwar
e/xmlui-monorepo/xmlui/src/components-core/lifecyc
le/dispatcher.ts:72:26)
    at /Users/yurii/projects/nsoftware/xmlui-monor
epo/xmlui/tests/components-core/lifecycle/dispatch
er.test.ts:98:13
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:302:11
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:1903:26
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:2326:20
    at new Promise (<anonymous>)
    at runWithCancel (file:///Users/yurii/projects
/nsoftware/xmlui-monorepo/node_modules/@vitest/run
ner/dist/chunk-artifact.js:2323:10)
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:2305:20
    at new Promise (<anonymous>)

stderr | tests/components-core/lifecycle/dispatche
r.test.ts > trace helpers > reportLifecycleViolati
on defaults to warn severity
Lifecycle violation on 'x': 'mount' handler threw.
 Error: boom
    at /Users/yurii/projects/nsoftware/xmlui-monor
epo/xmlui/tests/components-core/lifecycle/dispatch
er.test.ts:132:14
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:302:11
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:1903:26
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:2326:20
    at new Promise (<anonymous>)
    at runWithCancel (file:///Users/yurii/projects
/nsoftware/xmlui-monorepo/node_modules/@vitest/run
ner/dist/chunk-artifact.js:2323:10)
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:2305:20
    at new Promise (<anonymous>)
    at runWithTimeout (file:///Users/yurii/project
s/nsoftware/xmlui-monorepo/node_modules/@vitest/ru
nner/dist/chunk-artifact.js:2272:10)
    at file:///Users/yurii/projects/nsoftware/xmlu
i-monorepo/node_modules/@vitest/runner/dist/chunk-
artifact.js:2955:64

stderr | tests/components-core/lifecycle/dispatche
r.test.ts > trace helpers > reportLifecycleViolati
on strict mode emits error severity
Lifecycle violation on 'x': async 'unmount' handle
r is not awaited (React commits unmount synchronou
sly). Use 'onBeforeDispose' for async flush. undef
ined

stderr | tests/components-core/lifecycle/dispatche
r.test.ts > trace helpers > returned violation is
an instance of LifecycleViolationError
Lifecycle violation on 'x': 'mount' handler threw.
 undefined


 ❯ tests/components-core/lifecycle/dispatcher.test
.ts 14/14
 ❯ tests/components-core/rendering/ContainerUtils.
 ✓ tests/components-core/lifecycle/dispatcher.test
.ts (14 tests) 9ms
 ✓ tests/components-core/rendering/ContainerUtils.
test.ts (44 tests) 8ms

 ❯ tests/components-core/lifecycle/dispatcher.test
.ts 14/14
 ❯ tests/components-core/rendering/ContainerUtils.
 ✓ tests/parsers/scripting/function-proxy.test.ts
(7 tests) 9ms
 ✓ tests/parsers/scripting/parser-function.test.ts
 (14 tests) 8ms

 ❯ tests/components-core/lifecycle/dispatcher.test
.ts 14/14
 ❯ tests/components-core/rendering/ContainerUtils.
 ✓ tests/parsers/scripting/import-parse-basic.test
.ts (13 tests) 10ms

 ❯ tests/components-core/rendering/ContainerUtils.
test.ts 44/44
 ❯ tests/language-server/services/folding.test.ts
 ✓ tests/parsers/scripting/parser-async-await.test
.ts (28 tests) 8ms

 ❯ tests/language-server/services/folding.test.ts
[queued]
 ❯ tests/parsers/scripting/eval-tree-arrow.test.ts
 ✓ tests/parsers/scripting/eval-tree-arrow.test.ts
 (9 tests) 8ms

 ❯ tests/language-server/services/folding.test.ts
[queued]
 ❯ tests/parsers/scripting/eval-tree-arrow.test.ts
 ✓ tests/parsers/scripting/import-position.test.ts
 (19 tests) 9ms
 ✓ tests/language-server/services/folding.test.ts
(24 tests) 10ms
 ✓ tests/parsers/xmlui/transform.standalone-import
s.test.ts (3 tests) 7ms
 ✓ tests/parsers/scripting/parser-destructuring.te
st.ts (23 tests) 8ms

 ❯ tests/components-core/scripts-runner/phase2-glo
bals.test.ts [queued]
 ❯ tests/language-server/services/folding.test.ts

 ❯ tests/components-core/analyzer/walker.test.ts [
queued]
 ❯ tests/components-core/scheduler/determinism-uti
 ✓ tests/components-core/scheduler/determinism-uti
ls.test.ts (2 tests) 9ms

 ❯ tests/components-core/analyzer/walker.test.ts [
queued]
 ❯ tests/components-core/scheduler/determinism-uti
 ✓ tests/parsers/scripting/parser-unary.test.ts (5
4 tests) 11ms

 ❯ tests/components-core/analyzer/walker.test.ts [
queued]
 ❯ tests/components-core/scheduler/determinism-uti
 ✓ tests/components-core/scripts-runner/eval-tree-
arrow.test.ts (11 tests) 8ms

 ❯ tests/components-core/analyzer/walker.test.ts [
queued]
 ❯ tests/components-core/routing/canonicalise.test

 ❯ tests/components-core/analyzer/walker.test.ts [
queued]
 ❯ tests/components-core/inspectorUtils.test.ts [q
 ✓ tests/components-core/routing/canonicalise.test
.ts (2 tests) 8ms
 ✓ tests/components-core/inspectorUtils.test.ts (4
3 tests) 8ms
 ✓ tests/components-core/scripts-runner/phase2-glo
bals.test.ts (40 tests) 8ms

 ❯ tests/components-core/analyzer/walker.test.ts [
queued]
 ❯ tests/components-core/inspectorUtils.test.ts 43
 ✓ tests/components-core/scripts-runner/process-fu
nction.test.ts (4 tests) 8ms
 ✓ tests/parsers/scripting/parser-binary.test.ts (
45 tests) 8ms

 ❯ tests/components-core/analyzer/walker.test.ts [
queued]
 ❯ tests/components-core/inspectorUtils.test.ts 43
stdout | tests/components-core/scripts-runner/proc
ess-event.test.ts > Process statements (exp) > Eve
nt issue
0

stdout | tests/components-core/scripts-runner/proc
ess-event.test.ts > Process statements (exp) > Eve
nt issue
1

stdout | tests/components-core/scripts-runner/proc
ess-event.test.ts > Process statements (exp) > Eve
nt issue
2

 ✓ tests/components-core/scripts-runner/process-ev
ent.test.ts (2 tests) 7ms

 ❯ tests/components-core/analyzer/walker.test.ts [
queued]
 ❯ tests/components-core/inspectorUtils.test.ts 43
 ✓ tests/components-core/analyzer/walker.test.ts (
11 tests) 8ms

 ❯ tests/components-core/analyzer/walker.test.ts 1
1/11
 ❯ tests/components-core/scripts-runner/process-ev


 ❯ tests/components-core/analyzer/walker.test.ts 1
1/11
 ✓ tests/parsers/xmlui/transform.attr.test.ts (14
tests) 10ms
 ✓ tests/components-core/theming/component-layout.
resolver.test.ts (70 tests) 7ms
stdout | tests/parsers/scripting/process-event.tes
t.ts > Process statements > Event issue
0

stdout | tests/parsers/scripting/process-event.tes
t.ts > Process statements > Event issue
1

stdout | tests/parsers/scripting/process-event.tes
t.ts > Process statements > Event issue
2

 ✓ tests/parsers/scripting/process-event.test.ts (
2 tests) 11ms

 ❯ tests/components-core/analyzer/walker.test.ts 1
1/11
 ❯ tests/components-core/scripts-runner/process-ev


 ❯ tests/components-core/theming/component-layout.
resolver.test.ts 70/70
 ✓ tests/parsers/style-parser/parser.test.ts (50 t
ests) 7ms
 ✓ tests/components-core/type-contracts/verifier.t
est.ts (30 tests) 9ms
 ✓ tests/components/CodeBlock/hightlight-code.test
.ts (56 tests) 7ms
 ✓ tests/parsers/scripting/eval-tree-pre-post.test
.ts (17 tests) 7ms

 ❯ tests/components-core/type-contracts/verifier.t
est.ts 30/30
 ✓ tests/parsers/scripting/import-parse-alias.test
.ts (15 tests) 12ms

 ❯ tests/components-core/type-contracts/verifier.t
est.ts 30/30
 ✓ tests/parsers/xmlui/transform.escape.test.ts (1
7 tests) 12ms

 ❯ tests/components-core/type-contracts/verifier.t
est.ts 30/30
 ✓ tests/parsers/scripting/module-parse.test.ts (3
 tests) 4ms

 ❯ tests/components-core/type-contracts/verifier.t
est.ts 30/30
 ❯ tests/components/CodeBlock/hightlight-code.test

 ❯ tests/components-core/theming/layout-property-p
arser.test.ts [queued]
 ❯ tests/parsers/scripting/eval-tree-pre-post.test
 ✓ tests/parsers/scripting/import-parse-multiple.t
est.ts (14 tests) 10ms
 ✓ tests/components-core/theming/layout-property-p
arser.test.ts (75 tests) 8ms

 ❯ tests/components-core/theming/layout-property-p
 ✓ tests/parsers/xmlui/transform.circular.test.ts
(1 test) 9ms

 ❯ tests/components-core/analyzer/rules/id-unknown

 ❯ tests/components-core/analyzer/rules/id-unknown
 ✓ tests/components-core/wrapComponent.test.tsx (1
4 tests) 8ms

 ❯ tests/components-core/analyzer/rules/id-unknown
 ✓ tests/components-core/local-storage-functions.t
est.ts (22 tests) 7ms
 ✓ tests/parsers/scripting/parser-errors.test.ts (
38 tests) 8ms

 ❯ tests/components-core/analyzer/rules/id-unknown
 ✓ tests/components-core/scripts-runner/appStateSc
hema.test.ts (12 tests) 6ms
 ✓ tests/components-core/container/cow-state-proxy
.test.ts (35 tests) 7ms

 ❯ tests/components-core/analyzer/rules/id-unknown
 ✓ tests/parsers/xmlui/transform.warnings.test.ts
(8 tests) 8ms


 ✓ tests/keybinding-parser.test.ts (56 tests) 7ms

 ✓ tests/language-server/services/hover.test.ts (5
 tests) 4ms
 ✓ tests/components-core/analyzer/rules/id-unknown
-prop-event.test.ts (14 tests) 8ms
 ✓ tests/components-core/type-contracts/rules/rule
s.test.ts (75 tests) 7ms



 ❯ tests/components-core/analyzer/rules/id-unknown
 ✓ tests/components-core/scripts-runner/navigateBl
ank.test.ts (9 tests) 4ms
 ✓ tests/scripts/api-diff/api-diff.test.ts (13 tes
ts) 4ms

 ✓ tests/components-core/pubsub/PubSubService.test
.ts (12 tests) 11ms
 ✓ tests/components-core/rendering/collectFnVarDep
s.test.ts (11 tests) 6ms
 ✓ tests/components-core/forms/submit-guard.test.t
s (10 tests) 4ms

 ✓ tests/components-core/analyzer/rules/id-unknown
-component.test.ts (9 tests) 6ms


 ❯ tests/components-core/analyzer/rules/id-unknown
 ✓ tests/parsers/scripting/lexer-import.test.ts (2
2 tests) 7ms

 ❯ tests/components-core/analyzer/rules/id-unknown
 ✓ tests/language-server/services/type-contract-di
agnostic.test.ts (3 tests) 7ms

 ❯ tests/components-core/analyzer/rules/id-unknown
 ✓ tests/components-core/scripts-runner/process-im
plicit-context.test.ts (2 tests) 7ms

 ❯ tests/components-core/analyzer/rules/id-unknown

 ❯ tests/components-core/analyzer/rules/id-unknown

 ❯ tests/components-core/analyzer/rules/id-unknown
-method.test.ts [queued]
 ❯ tests/components-core/behaviors/behaviorConditi
 ✓ tests/components-core/forms/builtins.test.ts (7
2 tests) 7ms

 ❯ tests/components-core/analyzer/rules/id-unknown
-method.test.ts 0/6
 ❯ tests/components-core/behaviors/behaviorConditi
 ✓ tests/components-core/analyzer/rules/id-unknown
-method.test.ts (6 tests) 5ms
 ✓ tests/parsers/scripting/parser-primary.test.ts
(15 tests) 11ms
 ✓ tests/components-core/behaviors/behaviorConditi
onEvaluator.test.ts (57 tests) 16ms

 ❯ tests/components-core/analyzer/rules/id-unknown
-method.test.ts 6/6
 ❯ tests/components-core/behaviors/behaviorConditi
 ✓ tests/components-core/theming/padding-segments.
test.ts (42 tests) 9ms

 ❯ tests/components-core/behaviors/behaviorConditi
onEvaluator.test.ts 57/57
 ❯ tests/components-core/interception/ReadOnlyColl
 ✓ tests/parsers/scripting/process-implicit-contex
t.test.ts (2 tests) 8ms

 ❯ tests/components-core/behaviors/behaviorConditi
onEvaluator.test.ts 57/57
 ❯ tests/components-core/interception/ReadOnlyColl
 ✓ tests/components-core/standalone-import.test.ts
 (33 tests) 5ms
 ✓ tests/parsers/scripting/circular-import.test.ts
 (18 tests) 8ms

 ❯ tests/components-core/behaviors/behaviorConditi
onEvaluator.test.ts 57/57
 ❯ tests/components-core/interception/ReadOnlyColl
 ✓ tests/components-core/utils/resolveResponsiveWh
en.test.ts (29 tests) 6ms
 ✓ tests/components-core/rendering/buildProxy.test
.ts (16 tests) 5ms
 ✓ tests/components-core/interception/ReadOnlyColl
ection.test.ts (36 tests) 6ms

 ❯ tests/components-core/audit/metadata-rules.test
.ts [queued]
 ❯ tests/components-core/interception/ReadOnlyColl

 ❯ tests/components-core/audit/metadata-rules.test
.ts [queued]
 ❯ tests/components-core/interception/ReadOnlyColl


 ❯ tests/bin/vite-plugin-import.test.ts [queued]
 ❯ tests/components-core/accessibility/linter.test
 ✓ tests/components-core/concurrency/token.test.ts
 (15 tests) 5ms
 ✓ tests/bin/vite-plugin-import.test.ts (27 tests)
 8ms
 ✓ tests/components-core/udc-sandbox/runtime-integ
ration.test.ts (7 tests) 8ms

 ❯ tests/bin/vite-plugin-import.test.ts 27/27
 ❯ tests/components-core/accessibility/linter.test

 ❯ tests/bin/vite-plugin-import.test.ts 27/27
 ❯ tests/components-core/accessibility/linter.test
 ✓ tests/components-core/accessibility/linter.test
.ts (26 tests) 6ms

 ❯ tests/bin/vite-plugin-import.test.ts 27/27
 ✓ tests/parsers/paremeter-parser.test.ts (9 tests
) 5ms

 ❯ tests/components-core/accessibility/linter.test
.ts 26/26
 ✓ tests/components/Table/Table-keyboard-actions.t
est.ts (19 tests) 5ms
 ✓ tests/components-core/rendering/stateCompositio
n.test.ts (15 tests) 6ms
 ✓ tests/components-core/concurrency/coordinator.t
est.ts (9 tests) 6ms

 ❯ tests/components-core/accessibility/linter.test
.ts 26/26
 ✓ tests/components-core/scripts-runner/eval-tree-
regression.test.ts (4 tests) 5ms

 ❯ tests/components-core/analyzer/rules/_utils.tes
t.ts [queued]

 ❯ tests/components-core/analyzer/rules/_utils.tes
t.ts [queued]
 ✓ tests/components-core/analyzer/rules/_utils.tes
t.ts (21 tests) 6ms
 ✓ tests/parsers/parameter-parser.test.ts (9 tests
) 5ms

 ❯ tests/components-core/analyzer/rules/_utils.tes
t.ts 21/21
 ✓ tests/parsers/scripting/module-resolver.test.ts
 (38 tests) 6ms
 ✓ tests/components-core/RestApiProxy.transactionI
d.test.ts (7 tests) 5ms

 ❯ tests/components-core/analyzer/rules/_utils.tes
t.ts 21/21
 ✓ tests/parsers/scripting/ast-import.test.ts (9 t
ests) 5ms

 ❯ tests/components-core/audit/correlation.test.ts
 ✓ tests/components-core/type-contracts/rules/coer
ce.test.ts (9 tests) 4ms
 ✓ tests/components-core/audit/correlation.test.ts
 (14 tests) 10ms

 ❯ tests/components-core/audit/correlation.test.ts
 ✓ tests/components-core/interception/orderBy.test
.ts (12 tests) 4ms

 ❯ tests/components-core/audit/correlation.test.ts
 ✓ tests/components-core/theming/layout-resolver2.
test.ts (23 tests) 5ms

 ❯ tests/components-core/audit/correlation.test.ts

 ❯ tests/components-core/audit/correlation.test.ts
 14/14
 ✓ tests/components-core/errors/app-error.test.ts
(23 tests) 5ms

 ❯ tests/abstractions/layout-context-utils.test.ts
 ✓ tests/components-core/audit/policy.test.ts (6 t
ests) 4ms
 ✓ tests/abstractions/layout-context-utils.test.ts
 (28 tests) 4ms
 ✓ tests/parsers/xmlui/transform.test.ts (2 tests)
 4ms

 ❯ tests/abstractions/layout-context-utils.test.ts
 ✓ tests/components-core/versioning/verifier.test.
ts (11 tests) 4ms

 ❯ tests/abstractions/layout-context-utils.test.ts

 ❯ tests/abstractions/layout-context-utils.test.ts
 ✓ tests/components-core/reactive-graph/findCycles
.test.ts (8 tests) 5ms

 ❯ tests/abstractions/layout-context-utils.test.ts
 ✓ tests/components-core/forms/server-error-mappin
g.test.ts (10 tests) 5ms

 ❯ tests/components-core/audit/metadata-rules.test
.ts [queued]

 ❯ tests/components-core/audit/metadata-rules.test
.ts 0/16
 ✓ tests/components-core/audit/metadata-rules.test
.ts (16 tests) 5ms

 ❯ tests/components-core/audit/metadata-rules.test
.ts 16/16
 ✓ tests/components-core/scheduler/queue.test.ts (
5 tests) 6ms
 ✓ tests/language-server/project.test.ts (4 tests)
 4ms

 ❯ tests/components-core/audit/metadata-rules.test
.ts 16/16
 ✓ tests/parsers/markdown/parse-binding-expression
.test.ts (19 tests) 4ms

 ❯ tests/components-core/interception/request-para
m-converter.test.ts [queued]
 ✓ tests/components-core/versioning/rename-helper.
test.ts (6 tests) 5ms

 ❯ tests/components-core/interception/request-para
m-converter.test.ts 0/16
 ❯ tests/components-core/optimization/optimization
 ✓ tests/components-core/interception/request-para
m-converter.test.ts (16 tests) 5ms

 ❯ tests/components-core/accessibility/contrast.te
st.ts [queued]
 ❯ tests/components-core/interception/request-para
m-converter.test.ts 16/16
 ✓ tests/components-core/RestApiProxy.resolveUrl.t
est.ts (12 tests) 6ms
 ✓ tests/components-core/versioning/runtime.test.t
s (5 tests) 3ms

 ❯ tests/components-core/accessibility/contrast.te
st.ts 0/4
 ❯ tests/components-core/interception/request-para
m-converter.test.ts 16/16
 ✓ tests/components-core/accessibility/contrast.te
st.ts (4 tests) 4ms

 ❯ tests/components-core/accessibility/contrast.te
st.ts 4/4
 ❯ tests/components-core/interception/request-para
m-converter.test.ts 16/16
 ✓ tests/components/TileGrid/TileGrid-keyboard-nav
igation.test.ts (23 tests) 4ms

 ❯ tests/components-core/accessibility/contrast.te
st.ts 4/4
 ❯ tests/components-core/container/buildProxy.test
.ts [queued]

 ❯ tests/components-core/accessibility/contrast.te
st.ts 4/4
 ❯ tests/components-core/container/buildProxy.test
.ts [queued]
 ✓ tests/components-core/container/buildProxy.test
.ts (4 tests) 4ms

 ❯ tests/components-core/accessibility/contrast.te
st.ts 4/4
 ❯ tests/components-core/container/buildProxy.test
 ✓ tests/components-core/markup-check.test.ts (2 t
ests) 3ms
 ✓ tests/components-core/routing/custom-constraint
.test.ts (6 tests) 3ms

 ❯ tests/components-core/accessibility/contrast.te
st.ts 4/4
 ❯ tests/components-core/container/buildProxy.test
 ✓ tests/components-core/type-contracts/runtime.te
st.ts (3 tests) 4ms

 ❯ tests/components-core/behaviors/PubSubBehavior.
test.ts [queued]
 ❯ tests/components-core/container/buildProxy.test
 ✓ tests/components-core/inspector-logging.test.ts
 (5 tests) 3ms

 ❯ tests/components-core/behaviors/PubSubBehavior.
test.ts 0/10
 ❯ tests/components-core/inspector-logging.test.ts
 ✓ tests/components-core/behaviors/PubSubBehavior.
test.ts (10 tests) 4ms

 ❯ tests/components-core/behaviors/PubSubBehavior.
test.ts 10/10
 ❯ tests/components-core/inspector-logging.test.ts
 5/5
 ✓ tests/components-core/reactive-graph/diagnostic
s.test.ts (8 tests) 4ms
 ✓ tests/parsers/common/input-stream.test.ts (9 te
sts) 3ms

 ❯ tests/components-core/behaviors/PubSubBehavior.
test.ts 10/10
 ❯ tests/components-core/inspector-logging.test.ts
 ✓ tests/components-core/scripts-runner/parser-reg
ression.test.ts (1 test) 4ms
 ✓ tests/components-core/optimization/optimization
-guards.test.ts (14 tests) 5ms

 ❯ tests/components-core/behaviors/PubSubBehavior.
test.ts 10/10
 ❯ tests/components-core/inspector-logging.test.ts

 ❯ tests/components-core/optimization/optimization
-guards.test.ts 14/14
 ❯ tests/components-core/reactive-graph/diagnostic
 ✓ tests/parsers/scripting/parser-assignments.test
.ts (1 test) 4ms

 ❯ tests/components-core/global-variables-runtime.
test.ts [queued]
 ❯ tests/components-core/optimization/optimization
 ✓ tests/components-core/routing/constraint-compil
er.test.ts (4 tests) 3ms
 ✓ tests/parsers/style-parser/parseHVar.test.ts (7
 tests) 3ms

 ❯ tests/components-core/global-variables-runtime.
test.ts 0/5
 ❯ tests/components-core/optimization/optimization
-guards.test.ts 14/14
 ✓ tests/components-core/global-variables-runtime.
test.ts (5 tests) 3ms

 ❯ tests/components-core/global-variables-runtime.
test.ts 5/5
 ❯ tests/components-core/optimization/optimization
-guards.test.ts 14/14
 ✓ tests/components-core/type-contracts/suggestion
s.test.ts (12 tests) 3ms

 ❯ tests/components-core/global-variables-runtime.
test.ts 5/5
 ❯ tests/components-core/reactive-graph/graph.test
.ts [queued]
 ✓ tests/components-core/routing/query-constraints
.test.ts (3 tests) 3ms
 ✓ tests/components-core/reactive-graph/graph.test
.ts (7 tests) 3ms
 ✓ tests/components/Tree/Tree-states.test.ts (6 te
sts) 5ms

 ✓ tests/components-core/xmluiMarkupToComponent.te
st.ts (1 test) 6ms
 ✓ tests/components-core/concurrency/transactional
.test.ts (6 tests) 3ms
 ✓ tests/components-core/routing/guard-dispatcher.
test.ts (3 tests) 3ms
 ✓ tests/components-core/scheduler/replay.test.ts
(2 tests) 5ms
 ✓ tests/parsers/style-parser/generateHvarChain.te
st.ts (2 tests) 2ms
 ✓ tests/components-core/i18n/locale-resolver.test
.ts (3 tests) 6ms
 ✓ tests/components-core/utils/LruCache.test.ts (4
 tests | 2 skipped) 4ms
 ✓ tests/components-core/abstractions/treeAbstract
ions.test.ts (3 tests) 4ms
 ✓ tests/components-core/accessibility/focusScopeS
tack.test.ts (1 test) 2ms

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ Failed Tests 1 ⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯

 FAIL  tests/scripts/check-metadata-drift.test.ts
> checkMetadataDrift > passes when metadata props
are present in a nearby Props type
Error: Test timed out in 5000ms.
If this is a long-running test, pass a timeout val
ue as the last argument or configure it globally w
ith "testTimeout".
 ❯ tests/scripts/check-metadata-drift.test.ts:32:3
     30|
     31| describe("checkMetadataDrift", () => {
     32|   it("passes when metadata props are pre…
       |   ^
     33|     const fixture = makeFixture({
     34|       "collectedComponentMetadata.ts": c…

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1/1]⎯


 Test Files  1 failed | 221 passed (222)
      Tests  1 failed | 10185 passed | 2 skipped |
 1 todo (10189)
   Start at  18:36:55
   Duration  38.81s (transform 27.35s, setup 43.82
s, import 121.41s, tests 13.76s, environment 212.2
7s)

npm error Lifecycle script `test:unit` failed with
 error:
npm error code 1
npm error path /Users/yurii/projects/nsoftware/xml
ui-monorepo/xmlui
npm error workspace xmlui@0.12.27
npm error location /Users/yurii/projects/nsoftware
/xmlui-monorepo/xmlui
npm error command failed
npm error command sh -c vitest run
└─ xmlui#test:unit ──

 Tasks:    12 successful, 13 total
Cached:    0 cached, 13 total
  Time:    45.009s
Failed:    xmlui#test:unit


~/projects/nsoftware/xmlui-monorepo yurii/computedUses* 45s
❯
